--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -27,7 +27,7 @@
 
     }
     &:not(:disabled):not(:disabled):active {
-        background-color: $primary-light-2;
+        background-color: $white;
     }
 }
 
