--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -9,7 +9,7 @@ a {
 
   &:hover {
     transition: all $main-tp;
-    color: $primary-light-2;
+    color: $white;
   }
 }
 
