--- a/sass/parts/_footer.scss
+++ b/sass/parts/_footer.scss
@@ -13,7 +13,7 @@ footer {
   }
 
   .row {
-    padding: 40px 0 60px 0;
+    padding: 20px 0 60px 0;
 
     dl {
       font-family: $sub-font;
